--- a/Rapport/content/implementering.tex
+++ b/Rapport/content/implementering.tex
@@ -1,10 +1,12 @@
 \part{Implementering}
 %Michael forsøger sig lige med en lille intro. 
-Denne del af rapporten beskriver design og implementering af programmerne på mikrocontrolleren og FPGA'en. Der tages udgangspunkt i kravene til de enkelte dele der er opstillet i projektoplægget samt den foregående analyse af PTS. 
+Denne del af rapporten beskriver programmeringsmæssigt design og implementering af programmerne
+på mikrocontrolleren og FPGA'en.
+Der tages udgangspunkt i kravene til de enkelte dele der er opstillet i projektoplægget samt den foregående analyse af PTS.
 
-Først beskrives designet, valg af schedulering,  implementering og test af programmet til mikrocontrolleren. Dernæst beskrives implementeringen af de enkelte delelementer på FPGA'en.
+Først beskrives designet, valg af skedulering,
+implementering og test af programmet til mikrocontrolleren.
+Dernæst beskrives implementeringen af de enkelte delelementer på FPGA'en.
 \input{./content/Mikrocontroller}
 \include{./content/FPGA}
 %\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
-
-
