Fjernet Michaels ansvar

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -38,7 +38,7 @@ Nikolaj&\\
 &\\[6pt] \hline
 Anders&\\
 &\\[6pt] \hline
-Michael & All ze errorz\\
+Michael & \\
 &\\ 
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
