--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -2,6 +2,8 @@
 \setcounter{page}{1}
 \section*{Abstract}
 
+This abstract is not finished at all.
+
 This paper describes the development of a pan \& tilt system tracking a clay 
 pigeon moving in the air. 
 The tracking of the clay pigeon to cartesian coordinates is not included in this 
