--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,3 +1,4 @@
 \part{Justering af regulator}
 I denne del optimeringes koefficienterne i reguleringssløjferne for PTS.
-\input{./content/PID_optimering}
+%\input{./content/PID_optimering}
+\todo[inline,color=pink, author = Mikkel]{Husk at tilføje afsnit igen.}
