Tilføjet todo igen. Løst nogle todo. Problemer med at få henvist til tabel 7.3 og 7.4... Givet lidt feedback.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -35,6 +35,7 @@ Ved 11 bits opløsning på PWM og brug af BASYS boardets interne clock på 50 [M
 \begin{equation}
   \frac{50 \text{ [MHz]}}{2^{11}} \approx 24.41 \text{ [kHz]}
 \end{equation}
+\todo[inline,author=Anders]{Det giver 24,414 kHz.. Så det er vel bedre med en = frem for en approx.}
 
 \textbf{Kalibrering af motorposition}\\
 PTS skal kunne tændes i en tilfældig position og derefter kalibreres.
