--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -99,7 +99,7 @@ Den diskrete overføringsfunktions plads i blokdiagrammet for systemet
 er indtegnet i figur \ref{fig:digitalkontroller3}.
 \begin{figure}[!th]
 \centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\begin{tikzpicture}[node distance=2.6cm,>=latex',scale=0.9]
 \include*{./graphics/digitalkontroller3}
 \end{tikzpicture}
 \caption[Diskretiseret åbensløjfeoverføringsfunktion]
@@ -278,7 +278,7 @@ vil en åbensløjferegulering være et dårligt valg: den ville være følsom ov
 matematiske model. Desuden er der fra projektoplægget krav om en lukketsløjferegulering.
 Den simpleste regulering ville være en konstant forstærkning af fejlsignalet.
 En integrering af fejlsignalet ville gøre, at fejlsignalet ville blive tvunget mod 0,
-og dette er ønsket ift. kravet om en tracking fejl på under 1,02 \degree.
+og dette er ønsket ift. kravet om en tracking fejl på under 1,02\degree.
 De største krav stilles til systemets responstid og ikke så meget til udsvinget af responsen,
 og som udgangspunkt vælges derfor en PI-regulator, som gruppen er bekendt med fra
 undervisningen i reguleringsteknik.
