--- a/Rapport/graphics/digitalkontroller2.tex
+++ b/Rapport/graphics/digitalkontroller2.tex
@@ -27,7 +27,7 @@
 \draw [dashed,draw,->] (freq600) -| (AD2);
 \draw [dashed,draw,->] (freq600) -| (DD);
 \draw [draw,->] (y) |- node [near end,above] {\footnotesize $\Theta\left(t\right)$} (AD2);
-\draw [->] (AD2) -| node[pos=0.97] {\footnotesize -} node [near end,left] {\footnotesize $\theta\left(k\right)$} (sum1);
+\draw [->] (AD2) -| node[pos=0.97,left] {\footnotesize -} node [near end,left] {\footnotesize $\theta\left(k\right)$} (sum1);
 
 \coordinate[left of=Dahold,xshift=1cm,yshift=1.5cm](UL);
 \coordinate[left of=Dahold,xshift=1cm,yshift=-4.25cm](BL);
