--- a/Rapport/graphics/digitalkontroller3.tex
+++ b/Rapport/graphics/digitalkontroller3.tex
@@ -9,18 +9,18 @@
 \node [output, right of= Hzoh] (output){};
 
 
-\draw [draw,->] (input) -- node {\footnotesize $Pos\left(t\right)$} (AD);
+\draw [draw,->] (input) -- node[above] {\footnotesize $Pos\left(t\right)$} (AD);
 \draw [dashed,draw,->] (freq60) -- (AD);
-\draw [draw,->] (AD) -- node {\footnotesize $x\left(k\right)$} (DD);
-\draw [draw,->] (DD) -- node {\footnotesize $x_1\left(k\right)$} (Koordinattransformation);
-\draw [draw,->] (Koordinattransformation) -- node[pos=0.8] {\footnotesize +} (sum1);%node [near end] (sum1);
-\draw [draw,->] (sum1) -- node {\footnotesize $e\left(k\right)$} (Dz);
-\draw [draw,->] (Dz) -- node {\footnotesize $u\left(k\right)$} (Hzoh);
-\draw [->] (Hzoh) -- node [name=y] {\footnotesize $\theta\left(k\right)$}(output);
+\draw [draw,->] (AD) -- node[above] {\footnotesize $x\left(k\right)$} (DD);
+\draw [draw,->] (DD) -- node[above] {\footnotesize $x_1\left(k\right)$} (Koordinattransformation);
+\draw [draw,->] (Koordinattransformation) -- node[pos=0.8,above] {\footnotesize +} (sum1);%node [near end] (sum1);
+\draw [draw,->] (sum1) -- node[above] {\footnotesize $e\left(k\right)$} (Dz);
+\draw [draw,->] (Dz) -- node[above] {\footnotesize $u\left(k\right)$} (Hzoh);
+\draw [->] (Hzoh) -- node[name=y,above] {\footnotesize $\theta\left(k\right)$}(output);
 
 \coordinate[below of=Dz,yshift=1cm](point);
 
 \draw [-] (y) |-  (point);
-\draw [->] (point) -| node[pos=0.97] {\footnotesize -} (sum1);
+\draw [->] (point) -| node[pos=0.97,left] {\footnotesize -} (sum1);
 
 \node [above of= Dz,xshift=0cm,yshift=-1.8cm] (bla1){\scriptsize Controller};
