Fjernelse af "Page"

--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -1,7 +1,7 @@
 \newpage
 
 \tableofcontents
-\addtocontents{toc}{~\hfill\textbf{Page}\par}
+%\addtocontents{toc}{~\hfill\textbf{Side}\par}
 \listoffigures
 \listoftables  
 
@@ -16,7 +16,7 @@ Rapporten&/Master\_doc.pdf\\
 
 \end{tabular}
 \captionsetup{type=table}
-\caption*{Beskriver indholdet på CDROM'en.}
+\caption*{Indhold CDROM.}
 \label{tb:CD}
 \end{figure}
 \todo[inline,author=Mikael]{Indhold på CD-ROM'en}
