--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -6,4 +6,4 @@ Desuden drøftes transformationen af kartesiske koordinater til sfæriske koordi
 
 \input{./content/PTS}
 \include{./content/kontrollerdesign}
-\include{./content/koordinattransformation}
+%\include{./content/koordinattransformation}
