Forsøg med header, men ingen ændring.

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -12,11 +12,17 @@
 \include{./content/templates} % Kan bruges til copy paste ind i rapport for forskellige outputs.....
 \include{./content/ansvarsomraader}
 \include{./content/indholdsfortegnelse}
+
+
+
+
+
+
 \pagestyle{fancy}
 \fancyfoot{}
-\fancyfoot[LE,RO]{}
-\fancyfoot[LO,RE]{}
-\fancyfoot[LO,RE]{}
+%\fancyfoot[LE,RO]{}
+%\fancyfoot[LO,RE]{}
+%\fancyfoot[LO,RE]{}
 \fancyfoot[LO,RE]{\thepage}
 
 % Disable indentation
